--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "sonner": "^1.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
